Página acabado sin responsive y expuesto a muchas futuras modificaciones

--- a/html/estrellas.html
+++ b/html/estrellas.html
@@ -48,39 +48,38 @@
                 <p class="dorsal1">#23</p>
             </div>
             <div class="lebronAwards">
-                <h2>#8 KOBE BRYANT #24</h2>
-                    <p>Kobe Bryant fue un jugador de baloncesto
-                        profesional que disputó veinte
-                        temporadas en la NBA, todas ellas en el equipo de
-                        Los Angeles Lakers desde el año 1996 hasta
-                        2016 en los cúales consiguió 5 años anillos
-                        de campeón y un montón de logros y premios a nivel individual.
-                        Tenía una familia formada por su esposa Vanessa Laine Bryant y
-                        sus cuatro hijas, una de ellas Gianna Bryant
-                        la cual compartía su gran pasión por el baloncesto
-                        y que le hizo volver a las canchas como espectador
-                        para compartir momentos con ella.
-                    </p>
+                <h2>TROFEOS Y RÉCORDS</h2>
+                <p>- 3 anillos de Campeón de la NBA -</p>
+                <p>- 3 veces MVP de las finales de la NBA -</p>
+                <p>- 16 veces All-Star Game de la NBA -</p>
+                <p>- 4 veces MVP de la temporada regular -</p>
+                <p>- 2 veces MVP del All-Star Game de la NBA -</p>
+                <p>- Rookie del Año 2004-</p>
+                <p>- 2 oros y 1 bronce en los Juegos Olímpicos -</p>
+                <p>- Tercer Máximo Anotador de la historia de la NBA-</p>
+                <p>- Octavo Máximo Asistente de la historia de la NBA-</p>     
             </div>
             <div class="vidaPersonal Lebron">
-                <h2>GIANNA BRYANT #2</h2>
-                    <p>Gianna Bryant o también conocida
-                        como Gigi era la segunda de las
-                        cuatro hijas del ex-jugador Kobe
-                        Bryant, la cual a sus tan sólo 13
-                        años de edad ya era una gran
-                        aficionada al deporte, 
-                        especialmente el baloncesto. 
-                        Jugaba actualmente con el dorsal 
-                        número 2 en el equipo creado por 
-                        su propio padre llamado MAMBA. El 
-                        sueño de esta pequeña era llegar a 
-                        jugar la liga femenina de Uconn 
-                        Huskies y en un futuro quien sabe 
-                        tal vez a la WNBA dado el 
-                        gran talento que tenía y que su padre 
-                        reconocía a diario.
-                    </p>
+                <h2>KING JAMES</h2>
+                <p>LeBron Raymone James es un jugador de baloncesto estadounidense que con
+                    2,06 metros de estatura, su posición es la de alero, pero su talento, 
+                    versatilidad y poderío físico le permiten jugar tanto de base como de 
+                    ala-pívot. Nació el 30 de diciembre de 1984 en Akron, Ohio, estado donde
+                    vestiría su primera camiseta en la NBA con los Cleveland Cavaliers entre
+                    2003 y 2010. En 2010 se mudó a Miami con el objetivo de ganar su primer 
+                    anciado anillo de la NBA en los Miami Heat.
+                    Una vez conseguido dos de los 4 anillos que disputó con el equipo de
+                    Miami se decidió volver a su tierra natal y conseguir el primer anillo
+                    para una franquicia que le tenía un poco de tirria pero
+                    a fin de cuentas, le echaban mucho de menos y que necesitaban que
+                    volviera. A partir de aquí estuvo otras 4 temporadas en la que a pesar
+                    de que hubieron huesos duros de roer como Golden State Warriors, consiguió
+                    el objetivo y se lo dedico a su tierra con la frase: 'CLEVELAND! THIS IS FOR YOU!!'
+                    que quedará siempre en los recuerdos más bonitos que nos ha brindado esta liga.
+                    Actualmente pertenece a la plantilla de Los Angeles Lakers
+                    de la NBA donde sigue rompiendo récords y siendo considerado uno de los mejores
+                    jugadores de la NBA.
+                </p>
             </div>
             <div class="flechas Michael">
                 <p>></p>
@@ -94,39 +93,35 @@
                 <p class="dorsal2">#23</p>
             </div>
             <div class="michaelAwards">
-                <h2>#8 KOBE BRYANT #24</h2>
-                    <p>Kobe Bryant fue un jugador de baloncesto
-                        profesional que disputó veinte
-                        temporadas en la NBA, todas ellas en el equipo de
-                        Los Angeles Lakers desde el año 1996 hasta
-                        2016 en los cúales consiguió 5 años anillos
-                        de campeón y un montón de logros y premios a nivel individual.
-                        Tenía una familia formada por su esposa Vanessa Laine Bryant y
-                        sus cuatro hijas, una de ellas Gianna Bryant
-                        la cual compartía su gran pasión por el baloncesto
-                        y que le hizo volver a las canchas como espectador
-                        para compartir momentos con ella.
-                    </p>
+                <h2>TROFEOS Y RÉCORDS</h2>
+                <p>- 6 anillos de Campeón de la NBA -</p>
+                <p>- 6 veces MVP de las finales de la NBA</p>
+                <p>- 14 veces All-Star Game de la NBA -</p>
+                <p>- 5 veces MVP de la temporada regular -</p>
+                <p>- Mejor Defensor del Año 1988 -</p>
+                <p>- Rookie del Año 1985-</p>
+                <p>- Dos oros en los Juegos Olímpicos -</p>
+                <p>- Quinto Máximo Anotador de la historia de la NBA-</p>
+                <p>- 11 veces en el mejor Quinteto de la NBA-</p>
             </div>
             <div class="vidaPersonal Michael">
-                <h2>GIANNA BRYANT #2</h2>
-                    <p>Gianna Bryant o también conocida
-                        como Gigi era la segunda de las
-                        cuatro hijas del ex-jugador Kobe
-                        Bryant, la cual a sus tan sólo 13
-                        años de edad ya era una gran
-                        aficionada al deporte, 
-                        especialmente el baloncesto. 
-                        Jugaba actualmente con el dorsal 
-                        número 2 en el equipo creado por 
-                        su propio padre llamado MAMBA. El 
-                        sueño de esta pequeña era llegar a 
-                        jugar la liga femenina de Uconn 
-                        Huskies y en un futuro quien sabe 
-                        tal vez a la WNBA dado el 
-                        gran talento que tenía y que su padre 
-                        reconocía a diario.
-                    </p>
+                <h2>G.O.A.T</h2>
+                <p>Michael Jordan es un ex-jugador de baloncesto estadounidense nacido el 17
+                    de febrero de 1963 en la ciudad de Nueva York. En la
+                    actualidad es propietario del equipo de la NBA los Charlotte Hornets. En toda
+                    su trayectoria jugó para los Chicago Bulls y es considerado por la mayoría de
+                    aficionados y especialistas como el mejor jugador de baloncesto de todos los 
+                    tiempos. Se retiró definitivamente en 2003 en los Washington Wizards, tras 
+                    haberlo hecho en dos ocasiones anteriores, en 1993 y 1999 en los que también le
+                    dedicó tiempo a otros deportes como el béisbol o el golf que eran otras de sus
+                    pasiones, resumiendo todo un deportista nato. La posición natural de Jordan era 
+                    la de escolta, aunque también jugó de base en sus primeros años en la liga y de 
+                    alero en momentos puntuales, siendo siempre la posición de escolta desde donde 
+                    dominaba el juego. Ha sido conocido como uno de los jugadores más decisivos en los
+                    momentos finales de partido de todos los tiempos. Decidió incontables partidos y
+                    su competitividad era visible por su trash talk aunque también era conocido por
+                    su fanática ética de trabajo.
+                </p>
             </div>
             <div class="flechas Kareem">
                 <p>></p>
@@ -140,39 +135,35 @@
                 <p class="dorsal3">#33</p>
             </div>
             <div class="kareemAwards">
-                <h2>#8 KOBE BRYANT #24</h2>
-                    <p>Kobe Bryant fue un jugador de baloncesto
-                        profesional que disputó veinte
-                        temporadas en la NBA, todas ellas en el equipo de
-                        Los Angeles Lakers desde el año 1996 hasta
-                        2016 en los cúales consiguió 5 años anillos
-                        de campeón y un montón de logros y premios a nivel individual.
-                        Tenía una familia formada por su esposa Vanessa Laine Bryant y
-                        sus cuatro hijas, una de ellas Gianna Bryant
-                        la cual compartía su gran pasión por el baloncesto
-                        y que le hizo volver a las canchas como espectador
-                        para compartir momentos con ella.
-                    </p>
+                <h2>TROFEOS Y RÉCORDS</h2>
+                <p>- 6 anillos de Campeón de la NBA -</p>
+                <p>- 2 veces MVP de las finales de la NBA</p>
+                <p>- 10 veces elegido en el mejor Quinteto de la NBA -</p>
+                <p>- 6 veces MVP de la temporada regular -</p>
+                <p>- 5 veces elegido en el mejor Quinteto de la NBA -</p>
+                <p>- Rookie del Año 1970 -</p>
+                <p>- 19 veces All-Star Game de la NBA -</p>
+                <p>- Máximo Anotador de la historia de la NBA-</p>
+                <p>- Tercer Máximo Taponador de la historia de la NBA-</p>
             </div>
             <div class="vidaPersonal Kareem">
-                <h2>GIANNA BRYANT #2</h2>
-                    <p>Gianna Bryant o también conocida
-                        como Gigi era la segunda de las
-                        cuatro hijas del ex-jugador Kobe
-                        Bryant, la cual a sus tan sólo 13
-                        años de edad ya era una gran
-                        aficionada al deporte, 
-                        especialmente el baloncesto. 
-                        Jugaba actualmente con el dorsal 
-                        número 2 en el equipo creado por 
-                        su propio padre llamado MAMBA. El 
-                        sueño de esta pequeña era llegar a 
-                        jugar la liga femenina de Uconn 
-                        Huskies y en un futuro quien sabe 
-                        tal vez a la WNBA dado el 
-                        gran talento que tenía y que su padre 
-                        reconocía a diario.
-                    </p>
+                <h2>THE SKY HOOK</h2>
+                <p>Michael Jordan es un ex-jugador de baloncesto estadounidense nacido el 17
+                    de febrero de 1963 en la ciudad de Nueva York. En la
+                    actualidad es propietario del equipo de la NBA los Charlotte Hornets. En toda
+                    su trayectoria jugó para los Chicago Bulls y es considerado por la mayoría de
+                    aficionados y especialistas como el mejor jugador de baloncesto de todos los 
+                    tiempos. Se retiró definitivamente en 2003 en los Washington Wizards, tras 
+                    haberlo hecho en dos ocasiones anteriores, en 1993 y 1999 en los que también le
+                    dedicó tiempo a otros deportes como el béisbol o el golf que eran otras de sus
+                    pasiones, resumiendo todo un deportista nato. La posición natural de Jordan era 
+                    la de escolta, aunque también jugó de base en sus primeros años en la liga y de 
+                    alero en momentos puntuales, siendo siempre la posición de escolta desde donde 
+                    dominaba el juego. Ha sido conocido como uno de los jugadores más decisivos en los
+                    momentos finales de partido de todos los tiempos. Decidió incontables partidos y
+                    su competitividad era visible por su trash talk aunque también era conocido por
+                    su fanática ética de trabajo.
+                </p>
             </div>
         </div>
     </main>
